[build-system]
requires = ["poetry>=0.12,<1.0.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "reversefold.util"
version = "3.5.5"
description = "SSH, Proc, Multiproc, tail.py, log.py, stream.py, daemonize.py, etc."
readme = "README.md"
authors = ["Justin Patrin <papercrane@reversefold.com>"]
homepage = "https://github.com/reversefold/util"
repository = "https://github.com/reversefold/util.git"
packages = [
    {include="reversefold"},
]
license = "MIT"

[tool.poetry.scripts]
"daemonize.py" = "reversefold.util.daemonize:main"
"tail.py" = "reversefold.util.tail:main"
"log.py" = "reversefold.util.log:main"
"stream.py" = "reversefold.util.stream:main"
"sort_json.py" = "reversefold.util.sort_json:main"

[tool.poetry.dependencies]
python = ">3.4,<4"
colorama = "^0.4.1"
docopt = "^0.6.2"
fasteners = "^0.15.0"
python-daemon = "^2.1"
psutil = "^5.6"
watchdog = "^0.9.0"

[tool.poetry.dev-dependencies]
